# sussyStashFR

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sussy_stash/: MainActivity.kt
lib/: main.dart
lib/page/: config.dart  favorite.dart  history.dart  streamers.dart  video.dart  video_list.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: streamer_api.dart  streamer_model.dart
lib/store/: favorite.dart  global.dart  history.dart  nsfw.dart  theme.dart
lib/util/: cache.dart  file_cache.dart  json.dart
lib/widget/: category_card.dart  image.dart  more_video.dart
rust/: Cargo.toml
rust/src/: fetch.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  scraper.rs  static_args.rs
rust/src/api/: mod.rs  streamer_api.rs  streamer_model.rs
test/: widget_test.dart
