[package]
name = "rust_lib_sussy_stash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.29"
scraper = "0.19.0"
reqwest = { version = "0.12.2", features = ["rustls-tls"], default-features = false}
regex = "1.10.3"
url = "2"
anyhow = { version = "1.0"}

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros"]}